--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,46 @@ input::-webkit-inner-spin-button {
   background-color: var(--scroll-color);
   border-radius: 4px;
 }
+
+/* NEW CSS FOR LOADER */
+
+.preloaderBg {
+  position: fixed;
+  z-index: 10;
+  top: 25%;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.preloader {
+  margin: auto;
+  background: url("./img/Logo.png") no-repeat center;
+  background-size: 200px;
+  width: 300px;
+  height: 300px;
+}
+
+.preloader2 {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #0288d1;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  animation: spin 1s ease-in-out infinite;
+  position: relative;
+  margin: auto;
+  top: -280px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* NEW CSS FOR LOADER */
